# AI-Linux-Agent

./: README.md  pyproject.toml
storai/: __init__.py  cli.py  executor.py  llm_client.py  models.py  planner.py  reporting.py  safety.py  utils.py
storai/detectors/: __init__.py  cleanup.py  disks.py  space.py
tests/: test_allowlist.py  test_llm_fallback.py  test_plan_serialization.py  test_safety_device.py
