[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storai"
version = "0.1.0"
description = "Linux Storage AI Agent with strict safety controls"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "StorAI" }]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
ai = [
  "openai>=1.40.0",
  "anthropic>=0.34.0",
]
test = [
  "pytest>=8.2.0",
]

[project.scripts]
storai = "storai.cli:app"

[tool.setuptools.packages.find]
include = ["storai*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
